--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destiny game</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 </head>
 <body>
+    <div id="container">
+ 
+        <h1>FORTUNE COOKIE</h1>
+        <h3>Everyone loves cracking a magical cookie at the end of a meal... Now you can open as many as you want!</h3>
+        <button id="btn">I feel lucky today</button>
+        <img id="fortune" src="cookie-main.png" alt="cookie" width="400px" height="400px">
+        <button id="reloadButton">Crack another one</button>
+        </div>
 
     <script src="index.js"></script>
 </body>
